--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p> mon image</p> <br>
-    <img src="../IMG/images.jpg"> <br>
+    <img src="./images.jpg"> <br>
 
     <p>Mon tableau</p>
 
