--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <h5>de la</h5>
 <h6>bourata</h6>
 <p>Un truc qui déCHIRE</p>
-<video src="../IMG/michel.mp4">
+<video src="./michel.mp4">
     
 </video>
 
